# cryptoki-bridge

./: .gitmodules  Cargo.toml  DERhex2bin.py  README.md  build.rs  deploy.sh  flake.nix  showDER.sh  wrapper.h
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: pkcs11.yaml
cryptoki_macros/: Cargo.toml
cryptoki_macros/src/: lib.rs
integration-tests/: run_softfido_tests.sh
src/: communicator.rs  configuration.rs  configuration_provider.rs  cryptoki.rs  cryptoki_error.rs  lib.rs  persistence.rs  state.rs  utils.rs
src/communicator/: communicator_error.rs  group.rs  meesign.rs  mocked_communicator.rs  mocked_meesign.rs  task_name_provider.rs
src/configuration/: configuration_provider.rs  effective_interface_type.rs  interface_configuration.rs
src/configuration/configuration_provider/: controller_configuration.rs  env_configuration.rs
src/configuration/configuration_provider/controller_configuration/: interface_configuration_response.rs
src/configuration_provider/: configuration_provider_error.rs  controller_configuration.rs  env_configuration.rs  interface_configuration.rs  interface_configuration_response.rs  root_configuration.rs
src/cryptoki/: api.rs  decryption.rs  encryption.rs  general_purpose.rs  internals.rs  key_management.rs  message_digesting.rs  object_management.rs  session_management.rs  signing.rs  slot_token.rs  unsupported.rs  utils.rs
src/cryptoki/internals/: encryption.rs
src/persistence/: cryptoki_repo.rs  models.rs  persistence_error.rs  sqlite_cryptoki_repo.rs
src/state/: session.rs  slots.rs  state.rs  state_accessor.rs  token.rs
src/state/object/: attribute.rs  cryptoki_object.rs  data_object.rs  object_class.rs  private_key_object.rs  public_key_object.rs  secret_key_object.rs  template.rs
src/state/session/: handle_resolver.rs  session.rs  sessions.rs  single_session.rs
