[package]
name = "pkcs11"
version = "0.1.0"
edition = "2021"
description = "A PKCS#11 implementation that delegates tasks to a MeeSign server instance."
authors = ["Kristian Mika <kristian.mika@protonmail.com>"]
license = "MIT"

[package.metadata.deb]
maintainer = "Kristian Mika <kristian.mika@protonmail.com>"
extended-description = """\
A PKCS#11 implementation that delegates tasks to a MeeSign server instance."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/libmeesign_pkcs11.so",
        "usr/lib/libmeesign_pkcs11.so",
        "755",
    ],
]

[features]
default = []
mocked_meesign = ["dep:p256"]

[lib]
name = "meesign_pkcs11"
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.65.1"
tonic-build = "0.9.2"

[dependencies]
aes = "0.8.3"
byteorder = "1.4.3"
p256 = { version = "0.13.2", optional = true }
hex = "0.4.3"
lazy_static = "1.4.0"
libc = "0.2.147"
openssl = "0.10.55"
prost = "0.11"
rand = "0.8.5"
reqwest = { version = "0.11.19", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["tls", "transport"] }
