[package]
name = "cryptoki-bridge"
version = "0.1.1"
edition = "2021"
description = "A PKCS#11 implementation that delegates tasks to a MeeSign server instance."
authors = ["Kristian Mika <kristian.mika@protonmail.com>"]
license = "MIT"

[package.metadata.deb]
maintainer = "Kristian Mika <kristian.mika@protonmail.com>"
extended-description = """\
A PKCS#11 implementation that delegates tasks to a MeeSign server instance."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    [
        "target/release/libcryptoki_bridge.so",
        "usr/lib/libcryptoki_bridge.so",
        "755",
    ],
]

[features]
default = []
mocked_communicator = ["dep:p256"]

[lib]
name = "cryptoki_bridge"
crate-type = ["cdylib"]

[build-dependencies]
bindgen = "0.68.1"
tonic-build = "0.9.2"

[dev-dependencies]
rstest = "0.18.2"

[dependencies]
aes = "0.8.3"
bincode = "1.3.3"
byteorder = "1.4.3"
cbc = "0.1.2"
cryptoki_macros = { path = "cryptoki_macros" }
dashmap = "5.5.3"
hex = "0.4.3"
home = "0.5.5"
lazy_static = "1.4.0"
libc = "0.2.147"
openssl = "0.10.55"
p256 = { version = "0.13.2", optional = true }
prost = "0.11"
rand = "0.8.5"
reqwest = { version = "0.11.19", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.29.0", features = ["bundled"] }
thiserror = "1.0.50"
tokio = { version = "1.29.1", features = ["rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["tls", "transport"] }
uuid = { version = "1.4.1", features = ["v4"] }
rsa = "*"
